# IGAJAE

./: .coverage  .flake8  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
backend/: config.py  main.py
backend/engines/: jml_engine.py  policy_engine.py  request_engine.py
backend/stores/: audit_log.py  identity_store.py  request_store.py
connectors/: azuread_connector.py  github_connector.py  slack_connector.py
frontend/src/: App.jsx  index.css
tests/: test_access_request.py  test_jml.py
